# ANLNext

./: .gitignore  CMakeLists.txt  README  README.md
cmake/: CMakeLists.txt  CreateSwigPython.cmake  CreateSwigRuby.cmake  gen_anl.cmake
documentation/doxygen/: Doxyfile
documentation/html/: index.html
documents/html/: index.html
example/source/: CMakeLists.txt
example/source/include/: MyModule.hh
example/source/ruby/: CMakeLists.txt  myPackage.i
example/source/src/: MyModule.cc
examples/cli_read/source/: CMakeLists.txt  cli_example.cc
examples/histogram/: .gitignore  README  README.md
examples/histogram/reference_generation/: doc_detail.xml  doc_main.xml  make_doc.rb
examples/histogram/run/: make_script.rb  run_test_histogram.rb
examples/histogram/run_interactive/: run_test_histogram.rb
examples/histogram/run_py/: run_test_histogram.py
examples/histogram/script_generation/: make_script.rb
examples/histogram/source/: CMakeLists.txt
examples/histogram/source/include/: FillHistogram.hh  GenerateEvents.hh  SaveData.hh
examples/histogram/source/pyext/: CMakeLists.txt  testHistogramPy.i
examples/histogram/source/ruby/: CMakeLists.txt  testHistogram.i
examples/histogram/source/rubyext/: CMakeLists.txt  testHistogram.i
examples/histogram/source/src/: FillHistogram.cc  GenerateEvents.cc  SaveData.cc
examples/histogram_mt/: README.md
examples/histogram_mt/run/: benchmark.txt  run_test_histogram.rb
examples/histogram_mt/run_py/: run_test_histogram.py
examples/histogram_mt/source/: CMakeLists.txt
examples/histogram_mt/source/include/: FillHistogram.hh  GenerateEvents.hh
examples/histogram_mt/source/pyext/: CMakeLists.txt  testHistogramMTPy.i
examples/histogram_mt/source/ruby/: CMakeLists.txt  testHistogramMT.i
examples/histogram_mt/source/rubyext/: CMakeLists.txt  testHistogramMT.i
examples/histogram_mt/source/src/: CreateRootFile.cc  FillHistogram.cc  GenerateEvents.cc
examples/mt_testing/: README.md
examples/mt_testing/run/: run_mt_test.rb
examples/mt_testing/run_py/: run_mt_test.py
examples/mt_testing/source/: CMakeLists.txt
examples/mt_testing/source/include/: MyMTModule.hh
examples/mt_testing/source/pyext/: CMakeLists.txt  myPackageMTPy.i
examples/mt_testing/source/rubyext/: CMakeLists.txt  myPackageMT.i
examples/mt_testing/source/src/: MyMTModule.cc
examples/run/: run_anl_example.rb
examples/simple_loop/: .gitignore  README  README.md
examples/simple_loop/misc/: get_value.rb  get_value_objects.rb  inspect_value_objects.rb  parameters.json  print_values.rb  write_to_json.rb  write_to_json2.rb
examples/simple_loop/reference_generation/: anlmodules.xsl  anlmodules_style.css  doc_detail.xml  make_doc.rb
examples/simple_loop/run/: make_script.rb  parameters.json  run_anl_example.rb  run_app.rb  run_simple_loop.rb
examples/simple_loop/run_interactive/: run_simple_loop.rb
examples/simple_loop/run_py/: run_simple_loop.py  run_simple_loop_raw_chain.py
examples/simple_loop/script_generation/: make_script.rb
examples/simple_loop/source/: CMakeLists.txt
examples/simple_loop/source/include/: MyMapModule.hh  MyModule.hh  MyVectorModule.hh
examples/simple_loop/source/pyext/: CMakeLists.txt  myPackagePy.i
examples/simple_loop/source/ruby/: myPackage.i
examples/simple_loop/source/rubyext/: CMakeLists.txt  myPackage.i
examples/simple_loop/source/src/: MyMapModule.cc  MyModule.cc  MyVectorModule.cc
examples/simple_loop_mt/run/: run_anl_example.rb
examples/simple_loop_mt/source/: CMakeLists.txt
examples/simple_loop_mt/source/include/: MyMTModule.hh
examples/simple_loop_mt/source/ruby/: CMakeLists.txt  myPackageMT.i
examples/simple_loop_mt/source/src/: MyMTModule.cc
examples/source/include/: MyModule.hh
examples/source/ruby/: myPackage.i
examples/source/src/: MyModule.cc
install/include/anl/: ANLType.hh  BasicModule.hh  EvsManager.hh  ModuleParameter.hh  ModuleParameter_impl.hh  ModuleParameter_vector.hh  VModuleParameter.hh
install/lib/: libANLNext.dylib
install/lib/ruby/: ANL.bundle
source/: CMakeLists.txt
source/include/: ANLAccess.hh  ANLException.hh  ANLMacro.hh  ANLManager.hh  ANLManagerMT.hh  ANLManager_impl.hh  ANLNext.hh  ANLNext_impl.hh  ANLStatus.hh  ANLType.hh  ANLVModule.hh  BasicModule.hh  CLIUtility.hh  ClonedChainSet.hh  ClonedChainSet_impl.hh  EvsManager.hh  LoopCounter.hh  ModuleAccess.hh  ModuleParameter.hh  ModuleParameter_impl.hh  ModuleParameter_map.hh  ModuleParameter_member.hh  ModuleParameter_spec.hh  ModuleParameter_tuple.hh  ModuleParameter_vector.hh  NextCLI.hh  OrderKeeper.hh  VModuleParameter.hh  WrapANLPlus.hh
source/pyext/: CMakeLists.txt
source/pyext/interface/: ANL.i  anlnextpy.i  anlpy.i
source/ruby/: ANL.i  CMakeLists.txt  anl.i
source/rubyext/: ANL.i  CMakeLists.txt  anlnext.rb
source/rubyext/anlnext/: basic.rb  utility.rb
source/rubyext/interface/: ANL.i
source/script/: ANLLib.rb  makeANLNextHeader.rb  runANL.rb
source/scripts/: ANLLib.rb  makeANLNextHeader.rb
source/scripts/obsolete/: makeANLNextMain.rb
source/src/: ANLException.cc  ANLManager.cc  ANLManagerMT.cc  ANLManager_interactive.cc  ANLNext.cc  ANLNext_interactive.cc  ANLStatus.cc  ANLVModule.cc  BasicModule.cc  CLIUtility.cc  ClonedChainSet.cc  EvsManager.cc  ModuleAccess.cc  VModuleParameter.cc
